apps/media-server/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: k8s-mediaserver
          image: docker.io/linuxserver/prowlarr:2.6.5
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /prowlarr/ping
              port: 9696
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 20
          ports:
            - name: prowlarr-port
              containerPort: 9696
              protocol: TCP
          volumeMounts:
            - name: pvc-prowlarr-config
              mountPath: /config
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
      volumes:
        - name: mediaserver-volume
          persistentVolumeClaim:
            claimName: mediaserver-rwo-pvc
        - name: pvc-prowlarr-config
          persistentVolumeClaim:
            claimName: pvc-prowlarr-config
        - name: init-files-prowlarr
          configMap:
            defaultMode: 493
            name: init-prowlarr-cm
